Add support for URL plain-text extraction using go-boilerpipe

--- a/cmd/gcnl-entities/data/templ/index.html
+++ b/cmd/gcnl-entities/data/templ/index.html
@@ -27,7 +27,7 @@
             <div class="box">
                 <form>
                     <div class="form-group">
-                        <label for="content">Plain Text Content:</label>
+                        <label for="content">URL or Plain Text Content:</label>
                         <textarea id="content" class="form-control" rows="10"></textarea>
                     </div>
                     <button type="submit" id="btnSubmit" class="btn btn-default">Submit</button>
